--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,5 +10,6 @@
     <style name="TabTheme" parent="TextAppearance.Design.Tab">
 
         <item name="android:textStyle">bold</item>
+<!--        <item name="textAllCaps">false</item>-->
     </style>
 </resources>
