--- a/app/src/main/res/layout/fragment_detail_contact.xml
+++ b/app/src/main/res/layout/fragment_detail_contact.xml
@@ -41,15 +41,17 @@
                 <ImageView
                     android:id="@+id/detail_iv_image"
                     android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_height="120dp"
                     android:layout_marginTop="152dp"
                     android:background="@drawable/circleshape"
                     android:clipToOutline="true"
+                    android:src="@drawable/detail_iv_5"
+                    android:scaleType="centerCrop"
                     android:paddingHorizontal="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:src="@drawable/tab_iv_contacts" />
+                    tools:src="@drawable/detail_iv_5" />
 
                 <TextView
                     android:id="@+id/detail_tv_name"
