--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -42,15 +42,17 @@
                 <ImageView
                     android:id="@+id/mypage_iv_image"
                     android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_height="120dp"
                     android:layout_marginTop="152dp"
+                    android:src="@drawable/detail_iv_1"
                     android:background="@drawable/circleshape"
                     android:clipToOutline="true"
+                    android:scaleType="centerCrop"
                     android:paddingHorizontal="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:src="@drawable/tab_iv_contacts" />
+                    tools:src="@drawable/detail_iv_1" />
 
                 <TextView
                     android:id="@+id/mypage_tv_name"
@@ -74,7 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="별명"
+                    android:text="익듀니"
                     android:textColor="@color/text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
