--- a/app/src/main/res/layout/activity_recyclerview_item_list.xml
+++ b/app/src/main/res/layout/activity_recyclerview_item_list.xml
@@ -14,7 +14,7 @@
         android:text="A"
         android:textStyle="bold"
         android:textColor="#BCB0B0"
-        android:textSize="36sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.041"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,10 +22,13 @@
 
     <ImageView
         android:id="@+id/recyclerview_iv_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="90dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/recycleview_iv_ellipse"
+        android:background="@drawable/circleshape"
+        android:clipToOutline="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/detail_iv_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.136"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +66,7 @@
         android:text="WooJaeHoon"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_marginStart="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerview_iv_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
