--- a/app/src/main/res/layout/activity_girdview_item_list.xml
+++ b/app/src/main/res/layout/activity_girdview_item_list.xml
@@ -2,64 +2,53 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".recyclerview_item_list">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/recyclerview_collection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="A"
-        android:textColor="#BCB0B0"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/recyclerview_iv_profile"
         android:layout_width="70dp"
         android:layout_height="90dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="4dp"
         android:background="@drawable/circleshape"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
         android:src="@drawable/detail_iv_1"
-        app:layout_constraintStart_toEndOf="@+id/recyclerview_iv_fave_fill"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerview_collection" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/recyclerview_iv_fave_fill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/contact_iv_fave_fill"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recyclerview_iv_profile" />
+        app:layout_constraintEnd_toStartOf="@+id/recyclerview_iv_profile"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/recyclerview_speciallist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:text="abdeef University"
         android:textColor="#C9C0C0"
         android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@+id/recyclerview_iv_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerview_name" />
 
     <TextView
         android:id="@+id/recyclerview_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:text="WooJaeHoon"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/recyclerview_iv_profile"
-        app:layout_constraintTop_toTopOf="@+id/recyclerview_iv_profile" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerview_iv_profile" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
