--- a/app/src/main/res/layout/fragment_add_contact_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_contact_dialog.xml
@@ -34,26 +34,23 @@
         </LinearLayout>
 
         <!--원형뷰 레이아웃/-->
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+
+        <ImageView
+            android:id="@+id/cardImage"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_marginTop="40dp"
+            android:layout_centerHorizontal="true"
+            android:foreground="@drawable/circle_stroke"
+            android:background="@drawable/circle_background"
+            android:clipToOutline="true"
+            android:contentDescription="circleView"
+            android:src="@drawable/tab_iv_mypage_fill"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <!-- TODO: Update blank fragment layout -->
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/cardImage"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="50dp"
-                android:layout_weight="1"
-                android:contentDescription="circleView"
-                android:src="@drawable/tab_iv_mypage_fill"
-                app:civ_border_color="@color/text"
-                app:civ_border_width="6dp" />
-        </LinearLayout>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
 
 
         <!--이름입력-->
@@ -63,14 +60,14 @@
             android:layout_height="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+            app:layout_constraintTop_toBottomOf="@+id/cardImage">
 
             <EditText
                 android:id="@+id/add_editName"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="100dp"
-                android:layout_marginRight="100dp"
+                android:layout_marginLeft="90dp"
+                android:layout_marginRight="90dp"
                 android:hint="Name"
                 android:textAlignment="center"
                 android:textStyle="bold"
@@ -86,16 +83,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/addcontacts_iv_person"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"
+                android:scaleType="centerInside"/>
+
             <EditText
                 android:id="@+id/add_nickName"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginStart="120dp"
-                android:layout_marginEnd="120dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="50dp"
                 android:hint="NickName"
-                android:textSize="13sp"
-                android:textAlignment="center"
-                android:textStyle="bold" />
+                />
         </LinearLayout>
 
         <!--Icon Mobile/input-->
@@ -111,7 +114,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/mypage_iv_mobile" />
 
@@ -120,7 +123,7 @@
                 android:inputType="phone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="50dp"
                 android:hint="Mobile" />
 
@@ -138,7 +141,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/mypage_iv_specialist" />
 
@@ -147,7 +150,7 @@
                 android:inputType="text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="50dp"
                 android:hint="Specialist" />
         </LinearLayout>
@@ -164,7 +167,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/mypage_iv_email" />
 
@@ -173,7 +176,7 @@
                 android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="50dp"
                 android:hint="Mail" />
         </LinearLayout>
@@ -184,6 +187,7 @@
             android:id="@+id/linearLayout8"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
@@ -191,29 +195,40 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/addcontacts_iv_alarm" />
 
-            <Button
-                android:id="@+id/add_noti_offBtn"
-                android:layout_width="60dp"
-                android:layout_height="50dp"
-                android:text="OFF" />
 
             <Button
                 android:id="@+id/add_noti_10Btn"
+                android:layout_marginStart="10dp"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:text="10분뒤 알림"/>
 
             <Button
+                android:layout_marginStart="10dp"
                 android:id="@+id/add_noti_20Btn"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:text="20분뒤 알림"/>
+        </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/linearLayout9"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
+
+            <Button
+                android:id="@+id/add_noti_offBtn"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="70dp"
+                android:text="OFF" />
 
         </LinearLayout>
 
@@ -223,13 +238,14 @@
 
         <!--save/cancel btn-->
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
             android:layout_height="60dp"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">
 
             <Button
                 android:id="@+id/add_saveBtn"
