--- a/app/src/main/res/layout/activity_recyclerview_item_list.xml
+++ b/app/src/main/res/layout/activity_recyclerview_item_list.xml
@@ -11,12 +11,13 @@
         android:layout_width="70dp"
         android:layout_height="90dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="44dp"
         android:background="@drawable/circleshape"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
         android:src="@drawable/detail_iv_1"
         app:layout_constraintStart_toEndOf="@+id/recyclerview_iv_fave_fill"
-        tools:layout_editor_absoluteY="44dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/recyclerview_iv_fave_fill"
