--- a/app/src/main/res/layout/activity_girdview_item_list.xml
+++ b/app/src/main/res/layout/activity_girdview_item_list.xml
@@ -11,6 +11,8 @@
         android:id="@+id/recyclerview_iv_profile"
         android:layout_width="70dp"
         android:layout_height="90dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/circleshape"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
@@ -19,19 +21,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/recyclerview_iv_fave_fill"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/contact_iv_fave_fill"
-        app:layout_constraintEnd_toStartOf="@+id/recyclerview_iv_profile"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/recyclerview_speciallist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="3dp"
         android:text="abdeef University"
         android:textColor="#C9C0C0"
         android:textSize="15sp"
@@ -43,6 +38,8 @@
         android:id="@+id/recyclerview_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
         android:text="WooJaeHoon"
         android:textSize="20sp"
         android:textStyle="bold"
