--- a/app/src/main/res/layout/activity_girdview_item_list.xml
+++ b/app/src/main/res/layout/activity_girdview_item_list.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -11,7 +11,6 @@
         android:id="@+id/recyclerview_iv_profile"
         android:layout_width="70dp"
         android:layout_height="90dp"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/circleshape"
         android:clipToOutline="true"
@@ -25,7 +24,6 @@
         android:id="@+id/recyclerview_speciallist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="3dp"
         android:text="abdeef University"
         android:textColor="#C9C0C0"
@@ -38,7 +36,6 @@
         android:id="@+id/recyclerview_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:text="WooJaeHoon"
         android:textSize="20sp"
