--- a/app/src/main/res/layout/fragment_add_contact_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_contact_dialog.xml
@@ -19,6 +19,7 @@
             android:layout_height="65dp"
             android:layout_marginTop="40dp"
             android:layout_centerHorizontal="true"
+            android:scaleType="centerCrop"
             android:foreground="@drawable/circle_stroke"
             android:background="@drawable/circle_background"
             android:clipToOutline="true"
